--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-ts-router",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "types": "inde.d.ts",
@@ -14,40 +14,12 @@
     "ts-starter",
     "router"
   ],
-  "dependencies": {
-    "tslib": "^1.10.0",
-    "lodash": "^4.17.15",
-    "egg": "^2.26.0",
-    "koa": "^2.11.0"
-  },
-  "devDependencies": {
-    "autod": "^3.0.1",
-    "autod-egg": "^1.1.0",
-    "egg": "^2.16.0",
-    "egg-bin": "^4.11.0",
-    "egg-ci": "^1.11.0",
-    "egg-mock": "^3.21.0",
-    "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
-  },
   "engines": {
     "node": ">=8.0.0"
   },
   "scripts": {
-    "test": "npm run lint -- --fix && egg-bin pkgfiles && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "lint": "eslint .",
-    "ci": "egg-bin pkgfiles --check && npm run lint && npm run cov",
-    "pkgfiles": "egg-bin pkgfiles",
-    "autod": "autod"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": [
-    "app.js",
-    "agent.js",
-    "config",
-    "app"
-  ],
   "ci": {
     "version": "8, 10"
   },
@@ -60,5 +32,9 @@
   },
   "homepage": "https://github.com/CoCoyh/egg-ts-router/blob/master/README.md",
   "author": "coco",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ]
 }
